css/style.css
/* * {
  margin: 0;
  padding: 0;
} */

body {
    scroll-behavior: smooth;
  }

/* Nav */
nav ul li:hover {
   /* background-color: #eee5ed; */
}


/* Sidenav */
.sidenav {
  background-color: #eff6f6;
}

.sidenav li {
  border-bottom: 1px solid #c9e3e4;
}

.sidenav li>a {
  color: #058185;
  font-size: 1.2rem;
}


#searchMovie {
  background:url('../img/back.jpeg');
  background-size: cover;
  background-position: center;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.overlay {
  width: 100%;
  height: 100vh;
  background: grey;
  opacity: .3;
  position: absolute;
}

#searchMovie .card {
  opacity: .8;
  margin-top: -6rem;
}

#collectionResults .material-icons {
  width: 2rem;
}



.ml-10 {
  width: 2rem;
  margin-left: 1rem;
  margin-right: 5rem;
}

.mb-1 {
  margin-bottom: 2px;
}


.avatar a {
  cursor: pointer;
}



/* Class used to toggle display of no results message */

.hide {
  display: none;
}

#cast .card .card-title {
  font-size: 1rem;
}

blockquote{
  margin: 20px 0;
  padding-left: 1rem;
  border-left: 2px solid #64b5f6;
  color: grey;
}

.italics {
  font-style: italic;
}

/* Movie Info section */

#movieInfo {
  margin-top: 1rem;
}


/* Now Playing section */

.mov-showing {

}

.card .card-image .card-title {
  padding: .5rem;
  font-weight: 400;
}

.card .card-title {
  font-size: 1.2rem;
}

.card-action a {
  cursor: pointer;
}

/* End Now Playing section */

/* Best of 2018 section */

.top-ten {
  cursor: pointer;
  max-height: 3rem;
  overflow: hidden;
}


.collection a.collection-item {
  color: #43a3d2;
}

a.collection-item:hover {
  color: #52d7d3;
}

.collection ul li:hover {
   background-color: white;
}





/* End Best of 2018 section */


.page-footer {
  padding: 0;
}


@media (max-width: 600px) {

  .moviestar {
    min-height: 70%;
    max-width: 40%;
  }

  .card .card-title {
    font-size: 1.5rem;
  }


  .ml-10 {
    margin-right: 3rem;
  }

 }

